src/test/ui/async-await/dont-suggest-missing-await.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-missing-await.rs:14:18
   |
LL | async fn make_u32() -> u32 {
   |                        --- checked the `Output` of this `async fn`, found opaque type
...
LL |         take_u32(x)
   |                  ^ expected `u32`, found opaque type
   |
   = note: while checking the return type of the `async fn`
   = note:     expected type `u32`
           found opaque type `impl Future`
help: consider `await`ing on the `Future`
   |
LL |         take_u32(x.await)
   |                   ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
